Add TAO mixed bench for Neo4j